--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -1,3 +1,5 @@
+@import '../partials/variables';
+
 nav {
   padding: 2rem 2.8rem 2rem 2.8rem;
   display: grid;
@@ -8,10 +10,17 @@ nav {
   section#brand {
     div.brand-item {
       display: block;
-      color: #000000;
+      color: $primary-color;
       font-weight: 800;
       font-size: 1.2rem;
-      border-bottom: 0.2rem solid #000000;
+      transition: all 300ms ease-in-out;
+
+      &:hover {
+        color: #fff;
+        -webkit-animation: glow 1s ease-in-out infinite alternate;
+        -moz-animation: glow 1s ease-in-out infinite alternate;
+        animation: glow 1s ease-in-out infinite alternate;
+      }
     }
   }
   section#nav {
@@ -23,29 +32,32 @@ nav {
       display: inline-block;
       text-align: right;
       vertical-align: middle;
+
       a {
         text-decoration: none;
-        color: #333333;
+        color: $primary-color;
         position: relative;
         padding-bottom: 0.1rem;
+        transition: all 100ms ease-in-out;
 
-        &:before {
-          content: '';
-          position: absolute;
-          width: 0;
-          height: 0.2rem;
-          bottom: 0;
-          left: 0;
-          background-color: #333333;
-          visibility: hidden;
-          transition: all 0.3s ease-in-out;
-        }
-
-        &:hover:before {
-          visibility: visible;
-          width: 100%;
+        &:hover {
+          color: #fff;
+          -webkit-animation: glow 1s ease-in-out infinite alternate;
+          -moz-animation: glow 1s ease-in-out infinite alternate;
+          animation: glow 1s ease-in-out infinite alternate;
         }
       }
     }
+  }
+}
+
+@keyframes glow {
+  from {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #e60073, 0 0 20px #e60073,
+      0 0 25px #e60073, 0 0 30px #e60073, 0 0 35px #e60073;
+  }
+  to {
+    text-shadow: 0 0 10px #fff, 0 0 15px #ff4da6, 0 0 20px #ff4da6,
+      0 0 25px #ff4da6, 0 0 30px #ff4da6, 0 0 35px #ff4da6, 0 0 40px #ff4da6;
   }
 }
