feat: removed glow

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -5,9 +5,9 @@ $head-wt: 800;
 $body-wt: 600;
 
 $color1: rgba(30, 21, 42, 1);
-$color2: rgba(123, 40, 125, 1);
-$color3: rgba(229, 99, 153, 1);
-$color4: rgba(227, 74, 111, 1);
+$color2: rgb(79, 15, 80);
+$color4: rgb(255, 0, 106);
+$color3: rgb(255, 0, 64);
 $color5: rgba(255, 255, 242, 1);
 
 $foreground-color: $color5;
