--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -10,17 +10,10 @@ nav {
   section#brand {
     div.brand-item {
       display: block;
-      color: $primary-color;
+      color: $color4;
       font-weight: 800;
       font-size: 1.2rem;
-      transition: all 300ms ease-in-out;
-
-      &:hover {
-        color: #fff;
-        -webkit-animation: glow 1s ease-in-out infinite alternate;
-        -moz-animation: glow 1s ease-in-out infinite alternate;
-        animation: glow 1s ease-in-out infinite alternate;
-      }
+      border-bottom: 0.2rem solid $color4;
     }
   }
   section#nav {
@@ -32,32 +25,29 @@ nav {
       display: inline-block;
       text-align: right;
       vertical-align: middle;
-
       a {
         text-decoration: none;
-        color: $primary-color;
+        color: $color4;
         position: relative;
         padding-bottom: 0.1rem;
-        transition: all 100ms ease-in-out;
 
-        &:hover {
-          color: #fff;
-          -webkit-animation: glow 1s ease-in-out infinite alternate;
-          -moz-animation: glow 1s ease-in-out infinite alternate;
-          animation: glow 1s ease-in-out infinite alternate;
+        &:before {
+          content: '';
+          position: absolute;
+          width: 0;
+          height: 0.2rem;
+          bottom: 0;
+          left: 0;
+          background-color: $color4;
+          visibility: hidden;
+          transition: all 0.3s ease-in-out;
+        }
+
+        &:hover:before {
+          visibility: visible;
+          width: 100%;
         }
       }
     }
-  }
-}
-
-@keyframes glow {
-  from {
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #e60073, 0 0 20px #e60073,
-      0 0 25px #e60073, 0 0 30px #e60073, 0 0 35px #e60073;
-  }
-  to {
-    text-shadow: 0 0 10px #fff, 0 0 15px #ff4da6, 0 0 20px #ff4da6,
-      0 0 25px #ff4da6, 0 0 30px #ff4da6, 0 0 35px #ff4da6, 0 0 40px #ff4da6;
   }
 }
