--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,30 +1,56 @@
-@import './partials/variables';
-
-* {
-  margin: 0;
+html,
+body {
+  background-color: #ffffff;
+  color: #333333;
   padding: 0;
+  margin: 0;
+  width: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-html {
-  font-family: $main-font;
-  font-weight: $body-wt;
-  color: $foreground-color;
-  background-color: $background-color;
-  margin: 0;
-  body {
-    margin: 0;
+main {
+  width: 100%;
+  height: 100%;
+  nav {
+    padding: 2rem 0 2rem 0;
+    width: 100%;
+
+    #center {
+      width: 40%;
+      margin: auto;
+      display: grid;
+      grid-template-columns: auto 1fr auto;
+      #brand {
+        a {
+          font-weight: 800;
+          font-size: 1.2rem;
+          color: #333333;
+          text-decoration: none;
+
+          &:visited {
+            color: #333333;
+          }
+        }
+      }
+      #nav {
+        display: grid;
+        grid-template-columns: auto 1fr auto auto;
+        column-gap: 1rem;
+      }
+    }
   }
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: $head-wt;
-}
+a {
+  color: #999999;
+  text-decoration: none;
 
-p {
-  line-height: 1.5;
+  &:visited {
+    color: #999999;
+  }
+
+  &:hover {
+    color: #333333;
+  }
 }
